...
      defaultBarcodeFormat: 'CODE128',
      emoji: '🏪',
      brandColor: 'FF1B5E20',
      logoLabel: 'OK'),

  // 量販超市
  KnownStore('全聯福利中心',
      defaultBarcodeFormat: 'EAN13',
      emoji: '🛒',
      brandColor: 'FFCC0000',
      logoLabel: 'PX'),
  KnownStore('家樂福 Carrefour',
      defaultBarcodeFormat: 'EAN13',
...
      defaultBarcodeFormat: 'CODE128',
      emoji: '🥟',
      brandColor: 'FFEF6C00',
      logoLabel: '八方'),

  // 電器 3C
  KnownStore('全國電子',
      defaultBarcodeFormat: 'CODE128',
      emoji: '🔌',
      brandColor: 'FF0D47A1',
      logoLabel: '全國'),
  KnownStore('燦坤 3C',
      defaultBarcodeFormat: 'CODE128',
...
  '大全聯': '大潤發',
  'mega pxmart': '大潤發',
  '大潤發': '大潤發',
  '大潤發 rt-mart': '大潤發',
  'rt-mart': '大潤發',
  'rt mart': '大潤發',
  '家樂福': '家樂福 Carrefour',
  'carrefour': '家樂福 Carrefour',
  '好市多': '好市多 Costco',
  'costco': '好市多 Costco',
  '屈臣氏': '屈臣氏 Watsons',
  'watsons': '屈臣氏 Watsons',
  '康是美': '康是美 COSMED',
...
